# esp-idf-swift-support

./: .gitignore  CMakeLists.txt  README.md  idf_component.yml  project_include.cmake
.github/workflows/: build.yml
include/: swift_support.h
test_app/: CMakeLists.txt  sdkconfig  swift_support.code-workspace
test_app/main/: CMakeLists.txt  main.swift
